requestDemo now insert into database

--- a/templates/request_demo.html
+++ b/templates/request_demo.html
@@ -36,7 +36,7 @@
                 </div>
               </div>
             </div> <!--end of header-->
-            <div class="container-fluid body">
+            <div class="container-fluid body-2">
                 <div class="row">
                     <div class="col-md">
                         <h2 class="text-start pt-5 ml-5 lh-sm" style="color:#252733;font-size:36px;">Request a trial demo of our MyRecommend System<h2/>
@@ -49,7 +49,7 @@
                         <div class="shadow ml-5" id="rcsquare">
                             <div class="ml-4">
                                 <h2 class="lh-sm" style="color:#252733;font-size:24px;">Request demo<h2/>
-                                    <form class="pt-3">
+                                    <form class="pt-3" method="POST" action="/demo">
                                         <span id="rdinput">FIRST NAME</span><br/>
                                         <input class="rdbox" name="fname" type="text" placeholder="First name">
                                         <p></p>
