--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -123,7 +123,11 @@ body {
 	width: 75%;
 	background-color: #F7F8FC;
 }
-
+.body-2{
+	height: 100%;
+	width: 75%;
+	background-color: #F7F8FC;
+}
 .column{
 	float: left;
 	width: 55%;
