requestDemo can insert data into the database

--- a/templates/request_demo.html
+++ b/templates/request_demo.html
@@ -36,7 +36,7 @@
                 </div>
               </div>
             </div> <!--end of header-->
-            <div class="container-fluid body-2">
+            <div class="container-fluid body">
                 <div class="row">
                     <div class="col-md">
                         <h2 class="text-start pt-5 ml-5 lh-sm" style="color:#252733;font-size:36px;">Request a trial demo of our MyRecommend System<h2/>
