FAQ update, as well as adding href to the main pages.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,11 @@
                   <a class="header-link left-header-link">MyRecommend</a>
                 </div>
                 <div class="col-sm-8 align-self-center middle-header-col">
-                  <a  class="header-link">About Us</a>
-                  <a  class="header-link">Contact Us</a>
-                  <a  class="header-link">Subscription Plan</a>
-                  <a  class="header-link">Login/Signup</a>
+                <a href="/faq" class="header-link">FAQs</a>
+                <a href="/about" class="header-link">About Us</a>
+                <a href="/contactus" class="header-link">Contact Us</a>
+                <a href="/subscription" class="header-link">Subscription Plan</a>
+                <a href="/login" class="header-link">Login/Signup</a>
                 </div>
                 <div class="col-sm-2 align-self-center right-header-col">
                   <div class="button">
@@ -41,5 +42,6 @@
                 </div>
               </div>
             </div>
+			{%block content %}{% endblock %}
           </body>
           </html>
