--- a/templates/index.html
+++ b/templates/index.html
@@ -22,25 +22,26 @@
           </head>
           
           <body style="background-color:rgba(54.00000058114529, 55.00000052154064, 64.00000378489494, 1);">
-            <div class="container-fluid header overflow-hidden">
-              <div class="row header-row">
-                <div class="col-sm-2 align-self-center left-header-col">
-                  <img src="images/logo.png" />
-                  <a class="header-link left-header-link">MyRecommend</a>
-                </div>
-                <div class="col-sm-8 align-self-center middle-header-col">
-                  <a  class="header-link">About Us</a>
-                  <a  class="header-link">Contact Us</a>
-                  <a  class="header-link">Subscription Plan</a>
-                  <a  class="header-link">Login/Signup</a>
-                </div>
-                <div class="col-sm-2 align-self-center right-header-col">
-                  <div class="button">
-                    <span  class="btnText">Request Demo</span>
-                  </div>
+        <div class="container-fluid header overflow-hidden">
+            <div class="row header-row">
+              <div class="col-sm-2 align-self-center left-header-col">
+                <img src="images/logo.png" />
+                <a class="header-link left-header-link">MyRecommend</a>
+              </div>
+              <div class="col-sm-8 align-self-center middle-header-col">
+                <a href="/faq" class="header-link">FAQs</a>
+                <a href="/about" class="header-link">About Us</a>
+                <a href="/contactus" class="header-link">Contact Us</a>
+                <a href="/subscription" class="header-link">Subscription Plan</a>
+                <a href="/login" class="header-link">Login/Signup</a>
+              </div>
+              <div class="col-sm-2 align-self-center right-header-col">
+                <div class="button">
+                  <span  class="btnText">Request Demo</span>
                 </div>
               </div>
-            </div> <!--end of header-->
+            </div>
+          </div> <!--end of header-->
             <div class="container-fluid body">
               <div class="row justify-content-center">
                 <div class="col-6">
