--- a/static/css/register.css
+++ b/static/css/register.css
@@ -132,3 +132,32 @@ body {
 	margin-bottom: 15px;
 	text-transform: capitalize;
 }
+@media only screen and (max-width: 1366px) {
+	.logo{
+		margin-top:3%
+	}
+	.logo-name{
+		font-size:16px;
+	}
+	.text-1{
+		font-size:18px;
+		margin-top:20px;
+	}
+	.input-field-tag{
+		font-size:12px;
+		margin-top:10px
+	}
+	.input-field{
+		height:11%;
+		border-radius:5px;
+		font-size:14px;
+	}
+	.name-field{
+		height:50%;
+		margin-bottom:5px;
+	}
+	.toggle-icon{
+		top:-1.7rem;
+		right:0.45rem;
+	}
+}
