--- a/static/css/register.css
+++ b/static/css/register.css
@@ -132,7 +132,10 @@ body {
 	margin-bottom: 15px;
 	text-transform: capitalize;
 }
-@media only screen and (max-width: 1366px) {
+.sign-up-btn{
+	height: 30%;
+}
+@media screen and (min-height: 800px) and (max-height: 950px) {
 	.logo{
 		margin-top:3%
 	}
@@ -159,5 +162,37 @@ body {
 	.toggle-icon{
 		top:-1.7rem;
 		right:0.45rem;
+	}
+}
+@media screen and (max-height:800px){
+	.logo{
+		margin-top:3%
+	}
+	.logo-name{
+		font-size:16px;
+	}
+	.text-1{
+		font-size:18px;
+		margin-top:25px;
+	}
+	.input-field-tag{
+		font-size:12px;
+		margin-top:8px
+	}
+	.input-field{
+		height:11%;
+		border-radius:5px;
+		font-size:14px;
+	}
+	.name-field{
+		height:50%;
+		margin-bottom:5px;
+	}
+	.toggle-icon{
+		top:-1.7rem;
+		right:0.45rem;
+	}	
+	.sign-up-btn{
+		height: 25%;
 	}
 }
