responsive css for register and faq page

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -71,7 +71,7 @@
                     <!-- ***** FAQ Start ***** -->
                     <div class="col-md-6 offset-md-3">
                     </div>
-                    <div class="col-md-6 offset-md-3" style="z-index: 2;">
+                    <div class="col-md-6 offset-md-3 faq-nav" style="z-index: 2;">
 					<div class="col-md-6 offset-md-3">
 					<div class="faq-display">
 						<div id="accordion">
