--- a/templates/register.html
+++ b/templates/register.html
@@ -79,7 +79,7 @@ function showCfmPassword() {
                       <input class="input-field" id="passwordCfmInput" type="password" name="cfmPassword" placeholder="Password" required maxlength="32">
                         <div style="position: relative;"><img class="toggle-icon" id="showCfmPasswordBtn" src="images/passwordtoggle.png" onmousedown="showCfmPassword()" onmouseup="showCfmPassword()"></img></div>
                       </input>
-                      <div class="row justify-content-center" style="height: 30%;">
+                      <div class="row justify-content-center sign-up-btn">
                         <button class="btn-primary" id="signupBtn">Sign Up</button>
                       </div>
                     </form>
