Enable Navigation to Landing Page
Minor Update.
Currently only supports pages:
1. faq
2. request_demo
3. subscription_plan

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -49,7 +49,7 @@
               <div class="row header-row">
                 <div class="col-sm-2 align-self-center left-header-col">
                   <img src="images/logo.png" />
-                  <a class="header-link left-header-link">MyRecommend</a>
+                  <a href="/" class="header-link left-header-link">MyRecommend</a>
                 </div>
                 <div class="col-sm-8 align-self-center middle-header-col">
                 <a href="/faq" class="header-link">FAQs</a>
