Updated 3 issues for Test Case 1

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
         <div class="container-fluid header overflow-hidden">
             <div class="row header-row">
               <div class="col-sm-2 align-self-center left-header-col">
-                <img src="images/logo.png" />
-                <a class="header-link left-header-link">MyRecommend</a>
+                <img href="/" src="images/logo.png" />
+                <a  href="/" class="header-link left-header-link">MyRecommend</a>
               </div>
               <div class="col-sm-8 align-self-center middle-header-col">
                 <a href="/faq" class="header-link">FAQs</a>
@@ -51,10 +51,10 @@
                   <h3 class="text-center p-2" style="color:#000000;font-size:22px;font-weight: 500;">Providing your ecommerce website with more insight on how to increase sales through our recommendations<h3/>
                   <div class="row justify-content-around" style="padding-top:5%">
                     <div class="col-3 button"style="margin-right: -15%;">
-                      <span  class="btnText">Request Demo</span>
+                      <span href="/demo" class="btnText">Request Demo</span>
                     </div>
                     <div class="col-3 button">
-                      <span  class="btnText">View Pricing</span>
+                      <span href="/subscription" class="btnText">View Pricing</span>
                     </div>
                   </div>
                 </div>
