--- a/templates/login.html
+++ b/templates/login.html
@@ -68,7 +68,7 @@ function showPassword() {
                     </form>
                   </div>
                   <div class="row align-items-center">
-                    <p class="text-center input-field-tag text-3" style=>Don't have an account? <a id="signupLink" href="/register">Sign up</a></p>
+                    <p class="text-center input-field-tag text-3" style=>Don't have an account? <a id="signupLink" href="/register">Sign up</a>&emsp;<a id="signupLink" href="/">Go Back</a></p>
                   </div>
                   
                 </div>
