--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -312,7 +312,7 @@ body {
 	font-size: 12px;
 }
 
-#rdbutton{
+.rdbutton{
 	box-shadow:0px 4px 12px rgba(55.00000052154064, 81.00000277161598, 255, 0.23999999463558197);
 	background-color:rgba(55.00000052154064, 81.00000277161598, 255, 1);
 	width:180px;
@@ -398,7 +398,7 @@ body {
 	opacity: 0.7;
 }
 
-#sb_title{
+.sb_title{
 	font-family: 'Mulish';
 	font-style: normal;
 	font-weight: 700;
@@ -411,7 +411,7 @@ body {
 	display: inline-block;
 }
 
-#sb_subtitle{
+.sb_subtitle{
 	font-family: 'Mulish';
 	font-style: normal;
 	font-weight: 400;
