--- a/templates/subscription_plan.html
+++ b/templates/subscription_plan.html
@@ -15,6 +15,44 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="css/styles.css">
     </head>
+	<script> 
+	function monthly(){
+		if (document.getElementById("price-title-1").innerText != "month")
+		{
+			document.getElementById("price-1").innerHTML = "$59";
+			document.getElementById("price-title-1").innerHTML = "/ month";
+			document.getElementById("price-2").innerHTML = "$79";
+			document.getElementById("price-title-2").innerHTML = "/ month";
+			document.getElementById("price-3").innerHTML = "$109";
+			document.getElementById("price-title-3").innerHTML = "/ month";
+			document.getElementById("yearly-btn").classList.add("active-btn");
+			document.getElementById("yearly-btn").classList.remove("inactive-btn");
+			document.getElementById("monthly-btn").classList.add("inactive-btn");
+			document.getElementById("monthly-btn").classList.remove("active-btn");
+			document.getElementById("button-1").value = 59;
+			document.getElementById("button-2").value = 79;
+			document.getElementById("button-3").value = 109;
+		}
+	}
+	function yearly(){
+		if (document.getElementById("price-title-1").innerText != "year")
+		{			
+			document.getElementById("price-1").innerHTML = "$699";
+			document.getElementById("price-title-1").innerHTML = "/ year";
+			document.getElementById("price-2").innerHTML = "$759";
+			document.getElementById("price-title-2").innerHTML = "/ year";
+			document.getElementById("price-3").innerHTML = "$1,099";
+			document.getElementById("price-title-3").innerHTML = "/ year";
+			document.getElementById("monthly-btn").classList.add("active-btn");
+			document.getElementById("monthly-btn").classList.remove("inactive-btn");
+			document.getElementById("yearly-btn").classList.add("inactive-btn");
+			document.getElementById("yearly-btn").classList.remove("active-btn");
+			document.getElementById("button-1").value = 699;
+			document.getElementById("button-2").value = 759;
+			document.getElementById("button-3").value = 1099;
+		}
+	}
+	</script>
     <body style="background-color:rgba(54.00000058114529, 55.00000052154064, 64.00000378489494, 1);">
         <div class="container-fluid header overflow-hidden">
             <div class="row header-row">
@@ -31,20 +69,20 @@
               </div>
               <div class="col-sm-2 align-self-center right-header-col">
                 <div class="button">
-                  <span class="btnText">Request Demo</span>
+                  <span href="/demo" class="btnText">Request Demo</span>
                 </div>
               </div>
             </div>
         </div> <!--end of header-->
         <div class="container-fluid body pt-5">
-          <form>
+          <form method="GET" action="/payment">
             <div class="text-center pt-5">
-              <button class="active-btn" style="height: 45px">
+              <button class="active-btn" type="button" id="yearly-btn" style="height: 45px" onclick="yearly()">
                 <span class="text" style="font-size: 14px">Bill Yearly</span></br>
                 <span class="text">Save 12% total</span>
               </button>
-              <button class="ml-5 inactive-btn" style="height: 45px">
-                <span class="text">Monthly</span>
+              <button class="ml-5 inactive-btn" id="monthly-btn" type="button" style="height: 45px" onclick="monthly()">
+                <span class="text" style="font-size: 14px">Monthly</span>
               </button>
             </div>
             <div class="row p-5 m-5">
@@ -54,8 +92,8 @@
                     <img src="images/logo64by64.png" style="float: right;">
                   </div>
                   <div class="col-sm-6 pb-4">
-                    <span id="sb_title">Basic</span><br />
-                    <span id="sb_subtitle">Starter</span>
+                    <span class="sb_title">Basic</span><br />
+                    <span class="sb_subtitle">Starter</span>
                   </div>
                 </div>
                 <div class="row">
@@ -66,9 +104,9 @@
                   </div>
                 </div>
                 <div class="text-center pt-5">
-                  <span class="pt-5" id="sb_title">$59</span>
-                  <span class="pb-5" id="sb_subtitle">/ month</span>
-                  <button id="rdbutton" name="subscribe" value="basic">Choose</button>
+                  <span class="pt-5 sb_title" id="price-1">$59</span>
+                  <span class="pb-5 sb_subtitle" id="price-title-1">/ month</span>
+                  <button class="rdbutton" id="button-1" name="subscribe" value="59" type="submit">Choose</button>
                 </div>
               </div>
               <div class="col ml-4 sb-box">
@@ -77,8 +115,8 @@
                     <img src="images/logo64by64.png" style="float: right;">
                   </div>
                   <div class="col-sm-6 pb-4">
-                    <span id="sb_title">Pro</span><br />
-                    <span id="sb_subtitle">Advance</span>
+                    <span class="sb_title">Pro</span><br />
+                    <span class="sb_subtitle">Advance</span>
                   </div>
                 </div>
                 <div class="row">
@@ -89,9 +127,9 @@
                   </div>
                 </div>
                 <div class="text-center pt-5">
-                  <span class="pt-5" id="sb_title">$79</span>
-                  <span class="pb-5" id="sb_subtitle">/ month</span>
-                  <button id="rdbutton" name="subscribe" value="pro" type="submit">Choose</button>
+                  <span class="pt-5 sb_title" id="price-2">$79</span>
+                  <span class="pb-5 sb_subtitle" id="price-title-2">/ month</span>
+                  <button class="rdbutton" id="button-2" name="subscribe" value="79" type="submit">Choose</button>
                 </div>
               </div>
               <div class="col ml-4 sb-box">
@@ -100,8 +138,8 @@
                     <img src="images/logo64by64.png" style="float: right;">
                   </div>
                   <div class="col-sm-6 pb-4">
-                    <span id="sb_title">Premium</span><br />
-                    <span id="sb_subtitle">Ultimate User</span>
+                    <span class="sb_title">Premium</span><br />
+                    <span class="sb_subtitle">Ultimate User</span>
                   </div>
                 </div>
                 <div class="row">
@@ -112,9 +150,9 @@
                   </div>
                 </div>
                 <div class="text-center pt-5">
-                  <span class="pt-5" id="sb_title">$109</span>
-                  <span class="pb-5" id="sb_subtitle">/ month</span>
-                  <button id="rdbutton" name="subscribe" value="premium" type="submit">Choose</button>
+                  <span class="pt-5 sb_title" id="price-3">$109</span>
+                  <span class="pb-5 sb_subtitle" id="price-title-3">/ month</span>
+                  <button class="rdbutton" id="button-3" name="subscribe" value="109" type="submit">Choose</button>
                 </div>
               </div>
             </div>
