Test Case 2 Updated

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -48,7 +48,7 @@
             <div class="container-fluid header">
               <div class="row header-row">
                 <div class="col-sm-2 align-self-center left-header-col">
-                  <img src="images/logo.png" />
+                  <img href="/" src="images/logo.png" />
                   <a href="/" class="header-link left-header-link">MyRecommend</a>
                 </div>
                 <div class="col-sm-8 align-self-center middle-header-col">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-sm-2 align-self-center right-header-col">
                   <div class="button">
-                    <span  class="btnText">Request Demo</span>
+                    <span><a href="/demo" class="btnText">Request Demo</a></span>
                   </div>
                 </div>
               </div>
