--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
               </div>
               <div class="col-sm-2 align-self-center right-header-col">
                 <div class="button">
-                  <span  class="btnText">Request Demo</span>
+                  <span><a href="/demo" class="btnText">Request Demo</a></span>
                 </div>
               </div>
             </div>
@@ -51,10 +51,10 @@
                   <h3 class="text-center p-2" style="color:#000000;font-size:22px;font-weight: 500;">Providing your ecommerce website with more insight on how to increase sales through our recommendations<h3/>
                   <div class="row justify-content-around" style="padding-top:5%">
                     <div class="col-3 button"style="margin-right: -15%;">
-                      <span href="/demo" class="btnText">Request Demo</span>
+                      <span><a href="/demo" class="btnText">Request Demo</a></span>
                     </div>
                     <div class="col-3 button">
-                      <span href="/subscription" class="btnText">View Pricing</span>
+                      <span><a href="/subscription" class="btnText">View Pricing</a></span>
                     </div>
                   </div>
                 </div>
