--- a/templates/payment.html
+++ b/templates/payment.html
@@ -19,8 +19,8 @@
         <div class="container-fluid header overflow-hidden">
             <div class="row header-row">
               <div class="col-sm-2 align-self-center left-header-col">
-                <img src="images/logo.png" />
-                <a class="header-link left-header-link">MyRecommend</a>
+                <img href="/" src="images/logo.png" />
+                <a href="/" class="header-link left-header-link">MyRecommend</a>
               </div>
               <div class="col-sm-8 align-self-center middle-header-col">
                 <a href="/faq" class="header-link">FAQs</a>
@@ -31,7 +31,7 @@
               </div>
               <div class="col-sm-2 align-self-center right-header-col">
                 <div class="button">
-                  <span  class="btnText">Request Demo</span>
+                  <span><a href="/demo" class="btnText">Request Demo</a></span>
                 </div>
               </div>
             </div>
