--- a/templates/subscription_plan.html
+++ b/templates/subscription_plan.html
@@ -69,7 +69,7 @@
               </div>
               <div class="col-sm-2 align-self-center right-header-col">
                 <div class="button">
-                  <span href="/demo" class="btnText">Request Demo</span>
+                  <span><a href="/demo" class="btnText">Request Demo</a></span>
                 </div>
               </div>
             </div>
