--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -146,6 +146,7 @@ body {
 	font-size:14px;
 	letter-spacing:0.20000000298023224;
 	line-height:px;
+	text-decoration: none;
 }
 .body{
 	height: 160%;
